Fixed the color gradient for readablility

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,7 +6,6 @@
 }
 
 #logo {
-    color: #d32f2f;
     width: 200px;
 }
 
