--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -72,7 +72,7 @@ img {
 }
 
 .promo {
-    background: linear-gradient(90deg, #ff0000, #ffd700);
+    background: linear-gradient(90deg, #ff0000, #2b2b2b);
     color: #ffffff;
     text-align: center;
     padding: 20px;
